--- a/src/main/resources/templates/predictions/index.html
+++ b/src/main/resources/templates/predictions/index.html
@@ -4,27 +4,25 @@
 <head th:replace="~{layout :: head}" />
 
 <body id="predictions">
-    <script th:inline="javascript">
-        function send() {
-            0;
-        }
-    </script>
-
-    <div th:replace="~{layout :: header}">This is a header</div>
+    <header th:replace="~{layout :: header}">This is a header</header>
     <section>
-        <form method="GET" action="/predictions">
+        <form method="GET" action="/predictions" onchange="this.submit()">
             <table class="table text-center">
                 <tr>
                     <td>
                         <select name="userId">
                             <option th:each="user : ${users}" th:value="${user.id}"
                                 th:text="${user.firstName + ' ' + user.lastName}" th:selected="${user.id == userId}">
-                                Tony
+                                Tony Moules
                             </option>
                         </select>
                     </td>
                     <td>
-                        <input type="submit" value="Select a user's predictions">
+                        <select name="round">
+                            <option value="">All</option>
+                            <option th:each="rnd : ${rounds}" th:value="${rnd}"
+                                th:text="${rnd}" th:selected="${rnd == round}">1</option>
+                        </select>
                     </td>
                 </tr>
             </table>
@@ -32,6 +30,7 @@
         <table class="table table-striped text-center">
             <thead>
                 <tr>
+                    <th>Round</th>
                     <th>Date</th>
                     <th>Home</th>
                     <th>Away</th>
@@ -41,11 +40,12 @@
             <tbody>
                 <form method="GET" action="/api/prediction">
                     <tr th:each="prediction : ${predictions}">
+                        <td th:text="${prediction.fixture.round}">Arsenal</td>
                         <td th:text="${#dates.format(prediction.fixture.date, 'dd MMM yyyy')}">26 Feb 2023</td>
                         <td th:text="${prediction.fixture.home.name}">Arsenal</td>
                         <td th:text="${prediction.fixture.away.name}">Chelsea</td>
                         <td>
-                            <select name="result" th:onchange="|updatePrediction(this, ${prediction.id})|"
+                            <select name="result" th:onchange="|updatePredictionWS(this, ${prediction.id})|"
                                 th:disabled="${today.after(prediction.fixture.date)}">
                                 <option th:each="result : ${results}" th:value="${result}" th:text="${result.name}"
                                     th:selected="${prediction.result == result}">Home</option>
@@ -56,7 +56,7 @@
             </tbody>
         </table>
     </section>
-    <div th:replace="~{layout :: footer}">This is a footer</div>
+    <footer th:replace="~{layout :: footer}">This is a footer</footer>
 </body>
 
 </html>
