--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,29 +6,7 @@
     <title>Predictions</title>
     <link rel="stylesheet" href="/css/pico.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <script>
-        // /api/prediction/1/HOME
-        function updatePrediction(result, id) {
-            var url = result.form.action + "/result/" + id + "/" + result.value;
-            var xhttp = new XMLHttpRequest();
-            xhttp.open("GET", url, true);
-            xhttp.send();
-        }
-        // /api/fixture/result/1/HOME
-        function updateFixtureResult(result, id) {
-            var url = result.form.action + "/result/" + id + "/" + result.value;
-            var xhttp = new XMLHttpRequest();
-            xhttp.open("GET", url, true);
-            xhttp.send();
-        }
-        // /api/fixture/date/1/27/02/2023
-        function updateFixtureDate(date, id) {
-            var url = date.form.action + "/date/" + id + "/" + date.value;
-            var xhttp = new XMLHttpRequest();
-            xhttp.open("GET", url, true);
-            xhttp.send();
-        }
-    </script>
+    <script src="/scripts/javascript.js"></script>
 </head>
 
 <body th:attr="id=${id}">
@@ -39,8 +17,10 @@
                 <li><a id="homeNav" href="/">Home</a></li>
                 <li><a id="usersNav" href="/users">Users</a></li>
                 <li><a id="teamsNav" href="/teams">Teams</a></li>
-                <li><a id="tablesNav" href="/tables">Tables</a></li>
-                <li><a id="fixturesNav" href="/fixtures">Fixtures</a></li>
+                <li><a id="leagueNav" href="/league">League</a></li>
+                <li><a id="fixturesNav" href="/fixtures">Results</a></li>
+                <li><a id="missingNav" href="/missing">To Do</a></li>
+                <li><a id="upcomingNav" href="/upcoming">Upcoming</a></li>
                 <li><a id="predictionsNav" href="/predictions">Predictions</a></li>
             </ul>
         </nav>
