Display user's initials

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <table class="table table-striped text-center">
         <thead>
             <tr>
+                <th>Initials</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Score</th>
@@ -16,6 +17,7 @@
         </thead>
         <tbody>
             <tr th:each="userAndScore : ${usersAndScores}">
+                <td th:text="${userAndScore.user.initials}">Blob</td>
                 <td th:text="${userAndScore.user.firstName}">Blob</td>
                 <td th:text="${userAndScore.user.lastName}">Blob</td>
                 <td th:text="${userAndScore.score}">Blob</td>
