Add header to layout

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,6 +12,7 @@
 <body th:attr="id=${id}">
     <!-- Main Navigation -->
     <header>
+        <h1>Predictions - Spring Boot</h1>
         <nav th:fragment="header">
             <ul>
                 <li><a id="homeNav" href="/">Home</a></li>
