Added stadium field

--- a/src/main/resources/templates/teams/edit.html
+++ b/src/main/resources/templates/teams/edit.html
@@ -14,6 +14,10 @@
                 <td><input type="text" name="name" th:attr="value=${team.name}"/></td>
             </tr>
             <tr>
+                <th>Stadium</th>
+                <td><input type="text" name="name" th:attr="value=${team.stadium}"/></td>
+            </tr>
+            <tr>
                 <td><input type="submit" value="Update" /></td>
                 <td><a href="/teams">Cancel</a></td>
             </tr>
