Renamed To Do to Awaiting

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,7 +20,7 @@
                 <li><a id="teamsNav" href="/teams">Teams</a></li>
                 <li><a id="leagueNav" href="/league">League</a></li>
                 <li><a id="fixturesNav" href="/fixtures">Results</a></li>
-                <li><a id="missingNav" href="/missing">To Do</a></li>
+                <li><a id="missingNav" href="/missing">Awaiting</a></li>
                 <li><a id="upcomingNav" href="/upcoming">Upcoming</a></li>
                 <li><a id="predictionsNav" href="/predictions">Predictions</a></li>
             </ul>
