--- a/src/main/resources/templates/fixtures.html
+++ b/src/main/resources/templates/fixtures.html
@@ -32,6 +32,7 @@
     <table class="table table-striped text-center">
         <thead>
             <tr>
+                <th>Round</th>
                 <th>Date</th>
                 <th>Home Team</th>
                 <th>Away Team</th>
@@ -42,8 +43,8 @@
         <tbody>
             <form method="GET" action="/api/fixture">
                 <tr th:each="fixture : ${fixtures}">
-                    <td th:text="${#dates.format(fixture.date, 'yyyy-MM-dd')}">
-                    </td>
+                    <td th:text="${fixture.round}">1</td>
+                    <td th:text="${#dates.format(fixture.date, 'yyyy-MM-dd')}"></td>
                     <td th:text="${fixture.home.name}">Arsenal</td>
                     <td th:text="${fixture.away.name}">Chelsea</td>
                     <td>
